16-TLS/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp.samueldevops.com
    secretName: myapp-prod-tls
  rules:
  - host: myapp.samueldevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
